--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "sireneinvader",
+  "type": "module",
   "version": "1.0.0",
-  "description": "",
+  "description": "Project ",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/MatthieuGauthey/SireneInvader/issues"
   },
-  "homepage": "https://github.com/MatthieuGauthey/SireneInvader#readme"
+  "homepage": "https://github.com/MatthieuGauthey/SireneInvader#readme",
+  "dependencies": {
+    "mongodb": "^4.1.3",
+    "pm2": "^5.1.2"
+  }
 }
